# hue_ihm

./: .editorconfig  Cargo.toml  README.md
src/: main.rs
templates/: index.html.tera
